# Bestiaux

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0c3c01712ce0_add_biome_id_to_allele.py  251a8f9f81c3_add_daily_cycle_and_training_fields_to_.py  72bd9ba67918_remove_sessions_table.py  d13a132e689f_initial_schema.py  d7278486924a_seed_allele_catalog.py
backend/src/bestiaux/: config.py  database.py  game_constants.py  main.py  seed_data.py
backend/src/bestiaux/auth/: domain.py  protocols.py  repository.py  router.py  schemas.py  service.py
backend/src/bestiaux/biomes/: router.py  schemas.py
backend/src/bestiaux/breeding/: domain.py  protocols.py  repository.py  router.py  schemas.py  service.py
backend/src/bestiaux/compendium/: domain.py  router.py  schemas.py  service.py
backend/src/bestiaux/core/: dependencies.py  exception_handlers.py  exceptions.py
backend/src/bestiaux/creature/: domain.py  protocols.py  (+4 more)
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_router.py  test_breeding_router.py  test_compendium_router.py  test_creature_router.py  test_genetics_integration.py  test_training_router.py
backend/tests/unit/: test_auth_domain.py  test_auth_service.py  test_breeding_domain.py  test_breeding_service.py  test_compendium_domain.py  test_creature_domain.py  test_creature_service.py  test_creature_sleep_cycle.py  test_genetics_domain.py  test_genetics_service.py  test_training_domain.py
(+55 files in other folders)
